# ops-python

./: .gitignore  CGAL_ConvexHull_Traits.h  CMakeLists.txt  ConvexHull.cxx  ConvexHull.h  Dockerfile  ExportConvexHull.cxx  ExportConvexHull.h  InitCache.cmake  InitCacheHoffman2.cmake  InitCacheMinGW.cmake  LBFGSBWrapper.cxx  LBFGSBWrapper.h  OPSModel.cxx  OPSModel.h  OPSModelPython.cxx  PolyDataReader.cxx  PolyDataReader.h  README.md  ShowShells.ipynb  asphericity.py  makediskglyphs.py  makepolydata.py  opsxdmfwriter.py  paraview_reader_plugin.py  phasediagramsimulation.py  sampledriver.py  saveallvtk.py  simulation.py  storetrajectory.py
data/: generate_input.py
docker/: Dockerfile  README.html  README.md
